--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>R-interior</title>
+    <link rel="shortcut icon" href="./Images/residential.png" type="image/x-icon">
     <!--Tailwind & DaisyUi-->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -24,7 +25,70 @@
         }
     </style>
 </head>
+
 <body class="manrope">
+
+    <header>
+        <nav class="max-w-6xl mx-auto">
+            <div class="navbar bg-base-100">
+                <div class="navbar-start">
+
+                    <a href="#" class="
+                    items-center flex gap-[2px]"> <i
+                            class="fa-solid p-2 w-[32px] h-[32px] bg-[#ABEF5F] rounded-full fa-arrow-right"></i>
+                        <p class="text-[32px] font-extrabold">Rinterio</p>
+                    </a>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                    <ul class="menu menu-horizontal px-1">
+                        <li><a class="hover:text-[#27ae60] hover:font-bold" href="">Home</a></li>
+                        <li><a class="hover:text-[#27ae60] hover:font-bold" href="">Services</a></li>
+                        <li><a class="hover:text-[#27ae60] hover:font-bold" href="">Portfolio</a></li>
+                        <li><a class="hover:text-[#27ae60] hover:font-bold" href="">Blogs</a></li>
+                        <li><a class="hover:text-[#27ae60] hover:font-bold" href="">Contact Us</a></li>
+
+                    </ul>
+                </div>
+                <div class="navbar-end">
+                    <div class="dropdown">
+                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M4 6h16M4 12h8m-8 6h16" />
+                            </svg>
+                        </div>
+                        <ul tabindex="0"
+                            class="menu menu-sm dropdown-content bg-base-100 right-0 gap-5 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                            <li><a class="hover:text-[#27ae60] hover:font-bold" href="">Home</a></li>
+                            <li><a class="hover:text-[#27ae60] hover:font-bold" href="">Services</a></li>
+                            <li><a class="hover:text-[#27ae60] hover:font-bold" href="">Portfolio</a></li>
+                            <li><a class="hover:text-[#27ae60] hover:font-bold" href="">Blogs</a></li>
+                            <li><a class="hover:text-[#27ae60] hover:font-bold" href="">Contact Us</a></li>
+                        </ul>
+                    </div>
+                    <div class="flex gap-7 items-center ">
+                        <div><i class="fa-solid fa-magnifying-glass"></i></div>
+                        <div><i class="fa-solid fa-cart-shopping"></i></div>
+                        <div><button class="btn bg-[#ABEF5F]  text-black rounded-[30px] hidden md:block btn-success">
+                                <div class="flex items-center gap-2">
+                                    Book Consult
+                                    <i
+                                        class="fa-solid p-2 w-[32px] h-[32px] bg-[#ABEF5F] rounded-full fa-arrow-right"></i>
+                                </div>
+                                </button></div>
+                        </div>
+                    </div>
+                </div>
+        </nav>
+    </header>
+
+
+    <main></main>
+
+
+
+    <footer></footer>
 
 </body>
 
