--- a/index.html
+++ b/index.html
@@ -76,11 +76,37 @@
                                     <i
                                         class="fa-solid p-2 w-[32px] h-[32px] bg-[#ABEF5F] rounded-full fa-arrow-right"></i>
                                 </div>
-                                </button></div>
-                        </div>
+                            </button></div>
                     </div>
                 </div>
+            </div>
         </nav>
+
+        <banner class="max-w-6xl mx-auto">
+
+            <div class="flex justify-center px-5 md:px-0">
+                <img src="./Images/banner.png" alt="">
+            </div>
+            <div class="mt-5">
+                <h1 class="text-[30px] leading-[30px]  md:text-[64px] font-extrabold text-center md:leading-[80px]"> A
+                    barn house of this design has a <br> striking appearance</h1>
+            </div>
+            <div class="mt-9">
+                <p class="md:leading-[26px] leading-[24px] md:text-[16px] text-[14px] md:tracking-wide text-center">The
+                    barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered
+                    wood, sleek metal <br> accents, and large windows that flood the space with natural.</p>
+            </div>
+            <div class="mt-9 text-center  lg:pl-[550px]">
+                <button class="btn bg-[#ABEF5F80]  text-black rounded-[30px] w-[80%] md:w-[160px] md:block btn-success">
+                    <div class="flex items-center gap-2">
+                        View Details
+                        <i class="fa-solid p-2 w-[32px] h-[32px] bg-[#ABEF5F] rounded-full fa-arrow-right"></i>
+                    </div>
+                </button></div>
+
+
+        </banner>
+
     </header>
 
 
