--- a/index.html
+++ b/index.html
@@ -102,15 +102,119 @@
                         View Details
                         <i class="fa-solid p-2 w-[32px] h-[32px] bg-[#ABEF5F] rounded-full fa-arrow-right"></i>
                     </div>
-                </button></div>
-
-
+                </button>
+            </div>
         </banner>
-
     </header>
+    <main>
+        <div class="bg-slate-100">
+            <div class="max-w-6xl mx-auto">
+                <!--first main div-->
+                <div class="w-full md:h-[800px]  mt-20">
+                    <img src="./Images/Vector.png" class="pt-5 hidden md:block" alt="">
+                    <div class="md:flex block">
+                        <div class="mx-3 md:ml-16">
+                            <!--btn & bla bla bla-->
+                            <button class="btn h-[35px] ml-32 md:ml-0 px-8 mt-5 rounded-[24px] bg-white">
+                                <div class="flex gap-3">
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                    <h1>About us</h1>
+                                </div>
+                            </button>
+                            <div class="mt-5">
+                                <h1 class="text-[40px] leading-[50px] text-center md:text-left font-bold">We design
+                                    thoughtful,<br> liveable
+                                    spaces</h1>
+                                <p class="mt-4 text-center md:text-left leading-[26px]">The barn house captivates with
+                                    its blend of rustic charm
+                                    and <br>
+                                    modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                            </div>
+                            <div class="bg-white mt-8 rounded-[16px] p-8 flex gap-5 items-center">
+                                <div> <img src="./Images/commercial.png" alt=""></div>
+
+                                <div>
+                                    <h1 class="text-[20px] font-extrabold">Commercial</h1>
+                                    <p> The barn house captivates with its blend <br> of rustic charm and modern.</p>
+                                </div>
+                            </div>
+
+                            <div class="bg-white mt-5 rounded-[16px] p-8 flex gap-5 items-center">
+                                <div> <img src="./Images/residential.png" alt=""></div>
+
+                                <div>
+                                    <h1 class="text-[20px] font-extrabold">Residential</h1>
+                                    <p> The barn house captivates with its blend <br> of rustic charm and modern.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="./Images/Rectangle.png" class="md:mt-7   md:h-[590px]" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <div>
+                    <!--btn-div-->
+                    <button class="btn h-[35px] ml-32 md:ml-[540px]  px-8 mt-5 rounded-[24px] bg-white">
+                        <div class="flex gap-3">
+                            <i class="fa-solid fa-arrow-right"></i>
+                            <h1>How we works
+                            </h1>
+                        </div>
+                    </button>
+                </div>
+
+                <div class="text-center mt-5">
+                    <h1 class="text-[50px] font-extrabold">Our Works Process</h1>
+                    <p class="leading-[25px]"> The barn house captivates with its blend of rustic charm and modern
+                        sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+                </div>
+            </div>
+            <div class="max-w-6xl mx-auto">
+                <div class="md:flex block mt-10 justify-between ">
+                    <div class="bg-[#E7C1D3] mt-5 md:mt-0 rounded-[16px] md:w-[275px] p-[24px] md:h-[220px]">
+                        <img src="./Images/concept.png" alt="">
+                        <h1 class="text-[20px] mt-2 font-extrabold">Concept</h1>
+                        <p class="leading-[26px] ">The barn house captivates with its blend of rustic charm and modern.
+                        </p>
+                    </div>
+                    <div class="bg-[#EFDA6E] mt-5 md:mt-0 rounded-[16px] p-[24px] md:w-[275px] md:h-[220px]">
+                <img src="./Images/flow-chart.png" alt="">
+         <h1 class="text-[20px] mt-2 font-extrabold">Design Process</h1>
+           <p class="leading-[26px] ">The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+                    <div class="bg-[#A4DAC3] mt-5 md:mt-0 p-[24px] rounded-[16px] md:w-[275px] md:h-[220px]">
+                        <img src="./Images/vision.png" alt="">
+                        <h1 class="text-[20px] mt-2 font-extrabold">Supervision</h1>
+                        <p class="leading-[26px] ">The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+                    <div class="bg-[#77AAEA] mt-5 md:mt-0 p-[24px] rounded-[16px] md:w-[275px] md:h-[220px]">
+                        <img src="./Images/budget-planning.png" alt="">
+                        <h1 class="text-[20px] mt-2 font-extrabold">Budget Planning</h1>
+                        <p class="leading-[26px] ">The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
 
 
-    <main></main>
+                </div>
+            </div>
+
+
+            <br><br><br>
+
+
+        </div>
+
+
+
+
+
+
+
+
+    </main>
 
 
 
