--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <img src="./Images/banner.png" alt="">
             </div>
             <div class="mt-5">
-                <h1 class="text-[30px] leading-[30px]  md:text-[64px] font-extrabold text-center md:leading-[80px]"> A
+                <h1 class="text-[26px] leading-[30px]  md:text-[64px] font-extrabold text-center md:leading-[80px]"> A
                     barn house of this design has a <br> striking appearance</h1>
             </div>
             <div class="mt-9">
@@ -122,7 +122,7 @@
                                 </div>
                             </button>
                             <div class="mt-5">
-                                <h1 class="text-[40px] leading-[50px] text-center md:text-left font-bold">We design
+                                <h1 class="md:text-[40px] text-[26px] leading-[50px] text-center md:text-left font-bold">We design
                                     thoughtful,<br> liveable
                                     spaces</h1>
                                 <p class="mt-4 text-center md:text-left leading-[26px]">The barn house captivates with
@@ -173,7 +173,8 @@
                         sophistication, <br> featuring weathered wood, sleek metal accents.</p>
                 </div>
             </div>
-            <div class="max-w-6xl mx-auto">
+            
+            <div class="max-w-6xl mx-auto ">
                 <div class="md:flex block mt-10 justify-between ">
                     <div class="bg-[#E7C1D3] mt-5 md:mt-0 rounded-[16px] md:w-[275px] p-[24px] md:h-[220px]">
                         <img src="./Images/concept.png" alt="">
@@ -182,19 +183,22 @@
                         </p>
                     </div>
                     <div class="bg-[#EFDA6E] mt-5 md:mt-0 rounded-[16px] p-[24px] md:w-[275px] md:h-[220px]">
-                <img src="./Images/flow-chart.png" alt="">
-         <h1 class="text-[20px] mt-2 font-extrabold">Design Process</h1>
-           <p class="leading-[26px] ">The barn house captivates with its blend of rustic charm and modern.</p>
+                        <img src="./Images/flow-chart.png" alt="">
+                        <h1 class="text-[20px] mt-2 font-extrabold">Design Process</h1>
+                        <p class="leading-[26px] ">The barn house captivates with its blend of rustic charm and modern.
+                        </p>
                     </div>
                     <div class="bg-[#A4DAC3] mt-5 md:mt-0 p-[24px] rounded-[16px] md:w-[275px] md:h-[220px]">
                         <img src="./Images/vision.png" alt="">
                         <h1 class="text-[20px] mt-2 font-extrabold">Supervision</h1>
-                        <p class="leading-[26px] ">The barn house captivates with its blend of rustic charm and modern.</p>
+                        <p class="leading-[26px] ">The barn house captivates with its blend of rustic charm and modern.
+                        </p>
                     </div>
                     <div class="bg-[#77AAEA] mt-5 md:mt-0 p-[24px] rounded-[16px] md:w-[275px] md:h-[220px]">
                         <img src="./Images/budget-planning.png" alt="">
                         <h1 class="text-[20px] mt-2 font-extrabold">Budget Planning</h1>
-                        <p class="leading-[26px] ">The barn house captivates with its blend of rustic charm and modern.</p>
+                        <p class="leading-[26px] ">The barn house captivates with its blend of rustic charm and modern.
+                        </p>
                     </div>
 
 
@@ -203,18 +207,70 @@
 
 
             <br><br><br>
-
-
         </div>
 
+        <div class="max-w-6xl mx-auto">
+ <!--main div start -->
+   
+    <div class="md:mt-32 mt-10 text-center max-w-6xl mx-auto  lg:pl-[450px]">
+        <button class="btn bg-[#ABEF5F80]  text-black rounded-[30px]   md:block btn-success">
+            <div class="flex items-center gap-2">
+                Explore our Latest works
+                <i class="fa-solid p-2 w-[32px] h-[32px] bg-[#ABEF5F] rounded-full fa-arrow-right"></i>
+            </div>
+        </button>
+    </div>
+     <div class="mt-7">
+        <h1 class="md:text-[50px] text-[24px] text-center font-extrabold">Our Latest Portfolio</h1>
+        <p class="leading-[25px] text-center">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+     </div>
+   <div class="md:flex block mx-4 md:mx-0  mt-6 gap-5">
+        <div class="block md:flex md:w-[770px] p-[24px] w-full h-[460px] md:h-[220px] border-[2px] bg-white gap-6 rounded-[16px] mb-5 md:mb-0">
+          <div><img src="./Images/img1.png" class="ml-10 md:ml-0 md:pb-0 pb-3" alt=""></div>
+          <div class=" ">
+            <h1 class="text-[24px] font-extrabold">Commercial</h1>
+            <p class="leading-[26px] pt-5">The barn house captivates with its blend of rustic charm <br> and modern. The barn house captivates with its blend of <br> rustic charm and modern .</p>
+            <button class="mt-5"><div class="flex gap-2"><h1 class="txet-[20px] font-bold">View Details</h1> <i
+                class="fa-solid p-2 w-[32px] h-[32px] bg-[#ABEF5F] rounded-full fa-arrow-right"></i> </div></button>
+          </div>
+        </div>
+      <div class="border-[2px] rounded-[16px] p-[24px]">
+   <img src="./Images/img2.png" class="h-[170px] ml-2 md:ml-0" alt="">
+      </div>
+
+   </div>
+
+<div class="md:flex block mt-3 mx-4 md:mx-0 gap-5">
+
+<div class="border-[2px] rounded-[16px] p-[24px]">
+    <img src="./Images/img3.png" class="h-full w-full" alt="">
+</div>
+
+<div class="border-[2px] rounded-[16px] p-[24px] mt-5 md:mt-0 md:flex gap-4"> 
+ <img src="./Images/img4.png" class="w-full" alt="">
+<div>
+    <h1 class="text-[24px] font-extrabold">Commercial</h1>
+    <p class="leading-[26px] pt-5">The barn house captivates with <br> its blend of rustic charm and  <br> modern.</p>
+    <button class="mt-5"><div class="flex gap-2"><h1 class="txet-[20px] font-bold">View Details</h1> <i
+        class="fa-solid p-2 w-[32px] h-[32px] bg-[#ABEF5F] rounded-full fa-arrow-right"></i> </div></button>
+</div>
+</div>
+
+<div class="mt-5 md:mt-0">
+    <img src="./Images/img5.png" class="border-[2px] w-full rounded-[16px] p-[24px] h-full" alt="">
+</div>
+
+</div>
 
 
 
 
 
 
+ <!--main div end -->
+        </div>
 
-    </main>
+ </main>
 
 
 
