--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
                                 </div>
                             </button>
                             <div class="mt-5">
-                                <h1 class="md:text-[40px] text-[26px] leading-[50px] text-center md:text-left font-bold">We design
+                                <h1
+                                    class="md:text-[40px] text-[26px] leading-[50px] text-center md:text-left font-bold">
+                                    We design
                                     thoughtful,<br> liveable
                                     spaces</h1>
                                 <p class="mt-4 text-center md:text-left leading-[26px]">The barn house captivates with
@@ -173,7 +175,7 @@
                         sophistication, <br> featuring weathered wood, sleek metal accents.</p>
                 </div>
             </div>
-            
+
             <div class="max-w-6xl mx-auto ">
                 <div class="md:flex block mt-10 justify-between ">
                     <div class="bg-[#E7C1D3] mt-5 md:mt-0 rounded-[16px] md:w-[275px] p-[24px] md:h-[220px]">
@@ -210,71 +212,163 @@
         </div>
 
         <div class="max-w-6xl mx-auto">
- <!--main div start -->
-   
-    <div class="md:mt-32 mt-10 text-center max-w-6xl mx-auto  lg:pl-[450px]">
-        <button class="btn bg-[#ABEF5F80]  text-black rounded-[30px]   md:block btn-success">
-            <div class="flex items-center gap-2">
-                Explore our Latest works
-                <i class="fa-solid p-2 w-[32px] h-[32px] bg-[#ABEF5F] rounded-full fa-arrow-right"></i>
+            <!--main div start -->
+
+            <div class="md:mt-32 mt-10 text-center max-w-6xl mx-auto  lg:pl-[450px]">
+                <button class="btn bg-[#ABEF5F80]  text-black rounded-[30px]   md:block btn-success">
+                    <div class="flex items-center gap-2">
+                        Explore our Latest works
+                        <i class="fa-solid p-2 w-[32px] h-[32px] bg-[#ABEF5F] rounded-full fa-arrow-right"></i>
+                    </div>
+                </button>
             </div>
-        </button>
-    </div>
-     <div class="mt-7">
-        <h1 class="md:text-[50px] text-[24px] text-center font-extrabold">Our Latest Portfolio</h1>
-        <p class="leading-[25px] text-center">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
-     </div>
-   <div class="md:flex block mx-4 md:mx-0  mt-6 gap-5">
-        <div class="block md:flex md:w-[770px] p-[24px] w-full h-[460px] md:h-[220px] border-[2px] bg-white gap-6 rounded-[16px] mb-5 md:mb-0">
-          <div><img src="./Images/img1.png" class="ml-10 md:ml-0 md:pb-0 pb-3" alt=""></div>
-          <div class=" ">
-            <h1 class="text-[24px] font-extrabold">Commercial</h1>
-            <p class="leading-[26px] pt-5">The barn house captivates with its blend of rustic charm <br> and modern. The barn house captivates with its blend of <br> rustic charm and modern .</p>
-            <button class="mt-5"><div class="flex gap-2"><h1 class="txet-[20px] font-bold">View Details</h1> <i
-                class="fa-solid p-2 w-[32px] h-[32px] bg-[#ABEF5F] rounded-full fa-arrow-right"></i> </div></button>
-          </div>
+            <div class="mt-7">
+                <h1 class="md:text-[50px] text-[24px] text-center font-extrabold">Our Latest Portfolio</h1>
+                <p class="leading-[25px] text-center">The barn house captivates with its blend of rustic charm and
+                    modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <div class="md:flex block mx-4 md:mx-0  mt-6 gap-5">
+                <div
+                    class="block md:flex md:w-[770px] p-[24px] w-full h-[460px] md:h-[220px] border-[2px] bg-white gap-6 rounded-[16px] mb-5 md:mb-0">
+                    <div><img src="./Images/img1.png" class="ml-10 md:ml-0 md:pb-0 pb-3" alt=""></div>
+                    <div class=" ">
+                        <h1 class="text-[24px] font-extrabold">Commercial</h1>
+                        <p class="leading-[26px] pt-5">The barn house captivates with its blend of rustic charm <br> and
+                            modern. The barn house captivates with its blend of <br> rustic charm and modern .</p>
+                        <button class="mt-5">
+                            <div class="flex gap-2">
+                                <h1 class="txet-[20px] font-bold">View Details</h1> <i
+                                    class="fa-solid p-2 w-[32px] h-[32px] bg-[#ABEF5F] rounded-full fa-arrow-right"></i>
+                            </div>
+                        </button>
+                    </div>
+                </div>
+                <div class="border-[2px] rounded-[16px] p-[24px]">
+                    <img src="./Images/img2.png" class="h-[170px] ml-2 md:ml-0" alt="">
+                </div>
+
+            </div>
+
+            <div class="md:flex block mt-3 mx-4 md:mx-0 gap-5">
+
+                <div class="border-[2px] rounded-[16px] p-[24px]">
+                    <img src="./Images/img3.png" class="h-full w-full" alt="">
+                </div>
+
+                <div class="border-[2px] rounded-[16px] p-[24px] mt-5 md:mt-0 md:flex gap-4">
+                    <img src="./Images/img4.png" class="w-full" alt="">
+                    <div>
+                        <h1 class="text-[24px] font-extrabold">Commercial</h1>
+                        <p class="leading-[26px] pt-5">The barn house captivates with <br> its blend of rustic charm and
+                            <br> modern.
+                        </p>
+                        <button class="mt-5">
+                            <div class="flex gap-2 justify-center">
+                                <h1 class="txet-[20px] font-bold">View Details</h1> <i
+                                    class="fa-solid p-2 w-[32px] h-[32px] bg-[#ABEF5F] rounded-full fa-arrow-right"></i>
+                            </div>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="mt-5 md:mt-0">
+                    <img src="./Images/img5.png" class="border-[2px] w-full rounded-[16px] p-[24px] h-full" alt="">
+                </div>
+
+            </div>
+            <!--main div end -->
         </div>
-      <div class="border-[2px] rounded-[16px] p-[24px]">
-   <img src="./Images/img2.png" class="h-[170px] ml-2 md:ml-0" alt="">
-      </div>
 
-   </div>
+        <div class="md:mt-20 mt-10">
+            <div class="w-full md:h-[900px] bg-cover" style="background-image: url('./Images/bg.jpg');">
 
-<div class="md:flex block mt-3 mx-4 md:mx-0 gap-5">
+                <div class="md:mt-32 mt-10 text-center pt-5 md:pt-16 max-w-6xl mx-auto  lg:pl-[450px]">
+                    <button class="btn bg-[#ABEF5F80]  text-black rounded-[30px]   md:block btn-success">
+                        <div class="flex items-center gap-2">
+                            Let’s Connect
 
-<div class="border-[2px] rounded-[16px] p-[24px]">
-    <img src="./Images/img3.png" class="h-full w-full" alt="">
-</div>
+                            <i class="fa-solid p-2 w-[32px] h-[32px] bg-[#ABEF5F] rounded-full fa-arrow-right"></i>
+                        </div>
+                    </button>
+                </div>
+                <div class="md:mt-10 mt-5">
+                    <h1 class="text-center text-[26px] md:text-[50px] font-extrabold">Let’s Discuss Next Project
+                    </h1>
+                    <p class="font-medium mt-5 leading-[24px] text-center md:leading-[26px]">The barn house captivates
+                        with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek
+                        metal accents.</p>
+                </div>
 
-<div class="border-[2px] rounded-[16px] p-[24px] mt-5 md:mt-0 md:flex gap-4"> 
- <img src="./Images/img4.png" class="w-full" alt="">
-<div>
-    <h1 class="text-[24px] font-extrabold">Commercial</h1>
-    <p class="leading-[26px] pt-5">The barn house captivates with <br> its blend of rustic charm and  <br> modern.</p>
-    <button class="mt-5"><div class="flex gap-2"><h1 class="txet-[20px] font-bold">View Details</h1> <i
-        class="fa-solid p-2 w-[32px] h-[32px] bg-[#ABEF5F] rounded-full fa-arrow-right"></i> </div></button>
-</div>
-</div>
+                <div class="max-w-6xl mx-auto mt-9">
 
-<div class="mt-5 md:mt-0">
-    <img src="./Images/img5.png" class="border-[2px] w-full rounded-[16px] p-[24px] h-full" alt="">
-</div>
+                    <div class="md:flex gap-5 mt-5 md:ml-[250px]">
+                        <input type="text" placeholder="First name*"
+                            class="input rounded-[60px] border-[2px] input-bordered w-full md:max-w-xs" />
+                        <input type="text" placeholder="Last name*"
+                            class="input mt-5 input-bordered rounded-[60px] border-[2px] w-full md:max-w-xs" />
+                    </div>
 
-</div>
+                    <div class="md:flex gap-5 md:ml-[250px] mt-5 md:mt-5">
+                        <input type="text" placeholder="Mobile Number*"
+                            class="input rounded-[60px] border-[2px] input-bordered w-full md:max-w-xs" />
+                        <input type="text" placeholder="Email*"
+                            class="input mt-5 input-bordered rounded-[60px] border-[2px] w-full md:max-w-xs" />
+                    </div>
+                    <div class="  md:ml-[250px] mt-5 md:mt-5">
+                        <input type="text" placeholder="Write your message here"
+                            class="input input-bordered rounded-[32px] border-[2px] w-full h-[240px]  md:w-[660px] md:h-[240px]" />
+                    </div>
+                    <div class="md:mt-10 mt-5 ml-24 md:ml-0">
+                        <button
+                            class="btn bg-[#ABEF5F80] md:ml-80 md:w-[500px]  text-black rounded-[30px]   md:block btn-success">
+                            <div class="flex items-center md:ml-32 gap-2">
+                                Explore our Latest works
+                                <i class="fa-solid p-2 w-[32px] h-[32px] bg-[#ABEF5F] rounded-full fa-arrow-right"></i>
+                            </div>
+                        </button>
+                    </div>
+                </div>
 
 
-
-
-
-
- <!--main div end -->
+            </div>
         </div>
 
- </main>
 
 
 
-    <footer></footer>
+
+    </main>
+
+
+
+    <footer>
+        <footer class="footer bg-black text-base-content p-10">
+            <div>
+                <a href="#" class="md:pl-[500px] pl-20 items-center flex gap-[2px]"> <i
+                        class="fa-solid p-2 w-[32px] h-[32px] bg-[#ABEF5F] rounded-full fa-arrow-right"></i>
+                    <p class="text-[32px] text-white  font-extrabold">Rinterio</p>
+                </a>
+                <p class="font-medium mt-5 md:pl-[350px] text-white text-center leading-[24px]  md:leading-[26px]">The
+                    barn house captivates with its blend of rustic charm and modern sophistication,<br> featuring
+                    weathered wood, sleek metal accents.</p>
+
+                <div class=" md:ml-[440px] mt-5 ml-36">
+                    <div class="md:flex block gap-5  ">
+                        <h1 class="text-center"><a class="text-white" href="">Home</a></h1>
+                        <h1 class="text-center"><a class="text-white" href="">Services</a></h1>
+                        <h1 class="text-center"><a class="text-white" href="">Portfolio</a></h1>
+                        <h1 class="text-center"><a class="text-white" href="">Blogs</a></h1>
+                        <h1 class="text-center"><a class="text-white" href="">Contact Us</a></h1>
+                    </div>
+
+                </div>
+
+
+
+            </div>
+
+        </footer>
+    </footer>
 
 </body>
 
